--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
     <script type="text/javascript" src="bower_components/URIjs/src/URI.js"></script>
     <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript">
         $(function() {
@@ -21,10 +22,12 @@
                     <textarea class="js_content input-block-level" style="height: 400px;"><%=content%></textarea>
                 </div>
                 <div class="span12 text-center">
-                    <button class="js_publish_content btn btn-primary btn-large">Test</button>
+                    <p>
+                        <button class="js_publish_content btn btn-primary btn-large">Test</button>
+                    </p>
                 </div>
                 <div class="span12 text-center">
-                    <a class="js_link" style="overflow: hidden; text-overflow: ellipsis; max-width: 500px; display: inline-block" href="display.html#"></a>
+                    <a class="js_link well" style="overflow: hidden; text-overflow: ellipsis; max-width: 500px; display: inline-block; visibility: hidden;" href="display.html#"></a>
                 </div>
             </div>
         </div>
