--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             </div>
         </div>
     </script>
-    <link rel="stylesheet/less" type="text/css" href="style.less" />
-    <script type="text/javascript" src="bower_components/less.js/dist/less-1.4.1.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 </body>
