--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="span12 text-center">
                     <p>
-                        <button class="js_publish_content btn btn-primary btn-large">Test</button>
+                        <button class="js_publish_content btn btn-primary btn-large">Generate URL</button>
                     </p>
                 </div>
                 <div class="span12 text-center">
