--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="bower_components/URIjs/src/URI.js"></script>
     <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="bower_components/js-base64/base64.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript">
         $(function() {
@@ -31,6 +32,9 @@
                 </div>
             </div>
         </div>
+    </script>
+    <script type="text/html" id="edit_button">
+        <button class="js_edit_button btn" style="position: absolute; right: 0px; top: 0px; margin: 3px;">Edit Me</a>
     </script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
