--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </script>
     <script type="text/html" id="edit_button">
-        <button class="js_edit_button btn" style="position: absolute; right: 0px; top: 0px; margin: 3px;">Edit Me</a>
+        <button class="js_edit_button btn btn-primary" style="position: absolute; right: 0px; top: 0px; margin: 3px;">Edit Me</a>
     </script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
