Details to improve ACE

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h1 class="text-center">Linkier</h1>
                 </div>
                 <div class="span12">
-                    <div class="js_content well" style="height: 400px"></div>
+                    <div class="js_content" style="height: 400px"></div>
                 </div>
                 <div class="span12 text-center">
                     <p>
