--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h1 class="text-center">Linkier</h1>
                 </div>
                 <div class="span12">
-                    <div class="js_content" style="height: 400px"></div>
+                    <div class="js_content" style="height: 400px; margin: 10px 0px; border: 1px solid #e3e3e3; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);"></div>
                 </div>
                 <div class="span12 text-center">
                     <p>
