--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="bower_components/URIjs/src/URI.js"></script>
     <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript" src="bower_components/js-base64/base64.js"></script>
+    <script type="text/javascript" src="bower_components/lz-string/libs/lz-string-1.3.0.js"></script>
     <script type="text/javascript" src="bower_components/ace/build/src/ace.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript">
