--- a/index.src.html
+++ b/index.src.html
@@ -2,13 +2,8 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
-    <script type="text/javascript" src="bower_components/URIjs/src/URI.js"></script>
-    <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript" src="bower_components/lz-string/libs/lz-string-1.3.0.js"></script>
-    <script type="text/javascript" src="bower_components/ace/build/src/ace.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    {{#each jsfiles}}<script type="text/javascript" src="{{this}}"></script>
+    {{/each}}
     <script type="text/javascript">
         $(function() {
             app.main();
@@ -37,7 +32,8 @@
     <script type="text/html" id="edit_button">
         <button class="js_edit_button btn btn-primary" style="position: absolute; right: 0px; top: 0px; margin: 3px;">Edit Me</a>
     </script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    {{#each cssfiles}}<link rel="stylesheet" type="text/css" href="{{this}}"></link>
+    {{/each}}
 </head>
 <body>
 </body>
