--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <script type="text/javascript" src="app.min.js"></script>
-    
-    <script type="text/javascript">
-        $(function() {
+<!DOCTYPE html><html><head><meta charset="utf-8"><script type="text/javascript" src="app.min.js"></script><script type="text/javascript">$(function() {
             app.main();
-        });
-    </script>
-    <script type="text/html" id="editor">
-        <div class="container">
+        });</script><script type="text/html" id="editor"><div class="container">
             <div class="row">
                 <div class="span12">
                     <h1 class="text-center">Linkier</h1>
@@ -27,14 +17,4 @@
                     <a class="js_link well" style="overflow: hidden; text-overflow: ellipsis; max-width: 500px; display: inline-block; visibility: hidden;" href="display.html#"></a>
                 </div>
             </div>
-        </div>
-    </script>
-    <script type="text/html" id="edit_button">
-        <button class="js_edit_button btn btn-primary" style="position: absolute; right: 0px; top: 0px; margin: 3px;">Edit Me</a>
-    </script>
-    <link rel="stylesheet" type="text/css" href="style.min.css">
-    
-</head>
-<body>
-</body>
-</html>
+        </div></script><script type="text/html" id="edit_button"><button class="js_edit_button btn btn-primary" style="position: absolute; right: 0px; top: 0px; margin: 3px;">Edit Me</a></script><link rel="stylesheet" type="text/css" href="style.min.css"></head><body></body></html>
